--- a/contact.html
+++ b/contact.html
@@ -122,7 +122,7 @@
     </div>
     <!----------- Start Footer Sections ---------------->
 
-     <div class="contact-hero">
+    <div class="contact-hero">
         <div class="hero-content">
             <h1>Contact</h1>
             <div class="breadcrumb">
@@ -216,7 +216,7 @@
     <!----------- Start Footer Sections ---------------->
 
 
-    <div class="footer-wrapper" style="margin-top: 200px;">
+    <div class="footer-wrapper">
         <!-- the loop -->
         <div data-elementor-type="wp-post" data-elementor-id="835" class="elementor elementor-835">
             <div class="elementor-element elementor-element-1963468 e-flex e-con-boxed e-con e-parent" data-id="1963468"
@@ -252,7 +252,8 @@
                                                     <!-- /.sec-title -->
                                                     <div class="cta-one__content__btn wow fadeInUp"
                                                         data-wow-duration="1500ms" data-wow-delay="150ms">
-                                                        <a href="#" class="cityride-btn cityride-btn--border">
+                                                        <a href="/contact.html"
+                                                            class="cityride-btn cityride-btn--border">
                                                             <span class="cityride-btn__icon"><i
                                                                     class="fa-solid fa-phone-volume"></i></span>
                                                             <span style="margin-left: 5px;">Contact now</span>
@@ -301,7 +302,8 @@
                 data-id="efcaf2a" data-element_type="container">
                 <div class="elementor-element elementor-element-a71829f e-flex e-con-boxed e-con e-child"
                     data-id="a71829f" data-element_type="container">
-                    <div class="e-con-inner">
+                    <div class="e-con-inner"
+                        style="width: 100%; display: flex; justify-content: flex-start; gap: 40px; ">
                         <div class="elementor-element elementor-element-cb2e830 elementor-widget elementor-widget-cityride-shape"
                             data-id="cb2e830" data-element_type="widget" data-widget_type="cityride-shape.default">
                             <div class="elementor-widget-container">
@@ -331,16 +333,17 @@
                                                 loading="lazy" decoding="async"
                                                 src="/images/Alaknanda Transport logo final.png" width="103" height="55"
                                                 alt="Cityride"></a>
-                                        <p class="footer-widget__about-text">Phasellus ultricies aliquam volutpat
+                                        <p class="footer-widget__about-text" style="color: #fff;">Phasellus ultricies aliquam volutpat
                                             ullamcorper laoreet neque, a lacinia curabitur lacinia mollis</p>
                                         <!-- /.footer-widget__about-text -->
                                         <div class="footer-widget__social">
                                             <a href="https://www.facebook.com"><i
                                                     class="fa-brands fa-facebook-f"></i></a>
-                                            <a href="https://x.com"><i class="fa-brands fa-twitter"></i></a>
-                                            <a href="https://www.linkedin.com/"><i
-                                                    class="fa-brands fa-linkedin-in"></i></a>
-                                            <a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a>
+                                            <!-- <a href="https://x.com"><i class="fa-brands fa-twitter"></i></a> -->
+                                            <!-- <a href="https://www.linkedin.com/"><i
+                                                    class="fa-brands fa-linkedin-in"></i></a> -->
+                                            <a style="margin-left: 10px;" href="https://www.youtube.com/"><i
+                                                    class="fa-brands fa-youtube"></i></a>
                                         </div>
                                         <!-- /.footer-widget__call -->
                                     </div>
@@ -359,15 +362,17 @@
                                         <div class="menu-quick-links-container">
                                             <ul class="footer-widget__links">
                                                 <li><a href="#"><i class="fa-solid fa-angles-right"></i>Home</a></li>
-                                                <li><a href="#"><i class="fa-solid fa-angles-right"></i>About Us</a>
+                                                <li><a href="/about.html"><i class="fa-solid fa-angles-right"></i>About
+                                                        Us</a>
                                                 </li>
                                                 <li><a href="#"><i class="fa-solid fa-angles-right"></i>Our Service</a>
                                                 <li><a href="#"><i class="fa-solid fa-angles-right"></i>Fleet</a>
                                                 </li>
+                                                <li><a href="/gallery.html"><i
+                                                            class="fa-solid fa-angles-right"></i>Gallery</a>
                                                 </li>
-                                                <li><a href="#"><i class="fa-solid fa-angles-right"></i>Testimonial</a>
-                                                </li>
-                                                <li><a href="#"><i class="fa-solid fa-angles-right"></i>Contact</a></li>
+                                                <li><a href="/contact.html"><i
+                                                            class="fa-solid fa-angles-right"></i>Contact</a></li>
                                                 <!-- <li><a href="#"><i class="fa-solid fa-angles-right"></i>About Us</a></li> -->
                                             </ul>
 
@@ -378,7 +383,7 @@
                             </div>
                         </div>
                         <div class="elementor-element elementor-element-e3d7c85 e-con-full e-flex e-con e-child"
-                            data-id="e3d7c85" data-element_type="container">
+                            data-id="e3d7c85" data-element_type="container" style="display: none;">
                             <div class="elementor-element elementor-element-df227f4 elementor-widget elementor-widget-footer-news"
                                 data-id="df227f4" data-element_type="widget" data-widget_type="footer-news.default">
                                 <div class="elementor-widget-container">
@@ -453,13 +458,14 @@
                                                 <span class="footer-widget__info__icon">
                                                     <i class="fa-solid fa-envelope"></i> </span>
                                                 <!-- /.footer-widget__info__icon -->
-                                                <a href="">needhelp@company.com</a>
+                                                <a
+                                                    href="mailto:alaknandatransport@gmail.com">alaknandatransport@gmail.com</a>
                                             </li>
                                             <li>
                                                 <span class="footer-widget__info__icon">
                                                     <i class="fa-solid fa-phone-volume"></i> </span>
                                                 <!-- /.footer-widget__info__icon -->
-                                                <a href="">+91 7417 827 633</a>
+                                                <a href="tel: +91 7417 827 633">+91 7417 827 633</a>
                                             </li>
                                         </ul>
                                         <!-- /.list-unstyled -->
@@ -478,6 +484,7 @@
             </div>
         </div>
     </div>
+    <!-- end of the loop -->
     <!-- end of the loop -->
 
 
