--- a/index.html
+++ b/index.html
@@ -1093,7 +1093,7 @@
                                                     <!-- /.sec-title -->
                                                     <div class="cta-one__content__btn wow fadeInUp"
                                                         data-wow-duration="1500ms" data-wow-delay="150ms">
-                                                        <a href="#" class="cityride-btn cityride-btn--border">
+                                                        <a href="/contact.html" class="cityride-btn cityride-btn--border">
                                                             <span class="cityride-btn__icon"><i
                                                                     class="fa-solid fa-phone-volume"></i></span>
                                                             <span style="margin-left: 5px;">Contact now</span>
@@ -1178,10 +1178,10 @@
                                         <div class="footer-widget__social">
                                             <a href="https://www.facebook.com"><i
                                                     class="fa-brands fa-facebook-f"></i></a>
-                                            <a href="https://x.com"><i class="fa-brands fa-twitter"></i></a>
-                                            <a href="https://www.linkedin.com/"><i
-                                                    class="fa-brands fa-linkedin-in"></i></a>
-                                            <a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a>
+                                            <!-- <a href="https://x.com"><i class="fa-brands fa-twitter"></i></a> -->
+                                            <!-- <a href="https://www.linkedin.com/"><i
+                                                    class="fa-brands fa-linkedin-in"></i></a> -->
+                                            <a style="margin-left: 10px;" href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a>
                                         </div>
                                         <!-- /.footer-widget__call -->
                                     </div>
@@ -1319,9 +1319,6 @@
         </div>
     </div>
     <!-- end of the loop -->
-
-
-    </div>
     <!-- /.footer-wrapper -->
 
 
