--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             <div class="about-image-section">
 
                 <img class="main-image"
-                    src="/images/Aboutus.avif"
+                    src="/images/about-main.png"
                     alt="Woman with phone" />
 
           
