--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
 
                 <!-- City Street Image -->
                 <div class="city-image-area">
-                    <img src="/images/fuel-tanker-truck-14608792.webp"
+                    <img src="/images//ChatGPT Image Jul 3, 2025, 05_04_26 PM.png"
                         alt="City Street with Cabs">
                 </div>
             </div>
