--- a/index.html
+++ b/index.html
@@ -1177,7 +1177,7 @@
                                             <a href="https://www.facebook.com"><i
                                                     class="fa-brands fa-facebook-f"></i></a>
                                             <!-- <a href="https://x.com"><i class="fa-brands fa-twitter"></i></a> -->
-                                            <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i> </a>
+                                            <a href="https://www.instagram.com/"><i class="fa-brands fa-square-instagram"></i> </a>
                                             <!-- <a style="margin-left: 10px;" href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a> -->
                                         </div>
                                         <!-- /.footer-widget__call -->
