--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Libs and Plugins CSS -->
-    <link rel="stylesheet" href="https://www.gozoop.com/assets/css/helper.css?v20250529063536pm">
-    <link rel="stylesheet" href="https://www.gozoop.com/assets/css/theme.css?v20250529063536pm">
-    <link rel="stylesheet" href="https://www.gozoop.com/assets/css/revamp.css?v20250529063536pm">
+    <link rel="stylesheet" href="/assets/css/helper.css?v20250529063536pm">
+    <link rel="stylesheet" href="/assets/css/theme.css?v20250529063536pm">
+    <link rel="stylesheet" href="/assets/css/revamp.css?v20250529063536pm">
     <!-- IcoFont CSS CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/icofont@1.0.1/icofont.min.css">
 
@@ -1328,7 +1328,7 @@
     <!-- Font Awesome CDN for icons -->
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <!-- Core JS -->
-    <script src="https://www.gozoop.com/assets/js/jquery.min.js"></script>
+    <script src="/assets/js/jquery.min.js"></script>
 
     <!-- Libs and Plugins JS -->
     <script src="https://www.gozoop.com/assets/js/gsap.min.js"></script>
