--- a/index.html
+++ b/index.html
@@ -1330,10 +1330,10 @@
     <script src="/assets/js/jquery.min.js"></script>
 
     <!-- Libs and Plugins JS -->
-    <script src="https://www.gozoop.com/assets/js/gsap.min.js"></script>
-    <script src="https://www.gozoop.com/assets/js/ScrollTrigger.min.js"></script>
+    <script src="/assets/js/gsap.min.js"></script>
+    <script src="/assets/js/ScrollTrigger.min.js"></script>
     <script src="https://www.gozoop.com/assets/js/imagesloaded.pkgd.min.js"></script>
-    <script src="https://www.gozoop.com/assets/js/isotope.pkgd.min.js"></script>
+    <script src="/assets/js/isotope.pkgd.min.js"></script>
     <script src="https://www.gozoop.com/assets/js/theme.js?v20250529063536pm"></script>
 
 
