--- a/contact.html
+++ b/contact.html
@@ -126,7 +126,7 @@
         <div class="hero-content">
             <h1>Contact</h1>
             <div class="breadcrumb">
-                <a href="#">Home</a>
+                <a href="/index.html">Home</a>
                 <span class="separator">&rarr;</span>
                 <span>Contact</span>
             </div>
