--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
 
                 <!-- City Street Image -->
                 <div class="city-image-area">
-                    <img src="/images//ChatGPT Image Jul 3, 2025, 05_04_26 PM.png" alt="City Street with Cabs">
+                    <img src="/images/ChatGPT Image Jul 7, 2025, 10_41_24 PM.png" alt="City Street with Cabs">
                 </div>
             </div>
         </div>
@@ -1022,7 +1022,7 @@
                     <!-- Service Card 4 -->
                     <div class="service2-card">
                         <div class="service2-image-wrapper">
-                            <img src="/images/service-card-4.png" alt="Workers on a power line">
+                            <img src="/images/WhatsApp Image 2025-07-07 at 20.17.17_07009dfc.jpg" alt="Workers on a power line">
                         </div>
                         <div class="service2-number-circle">04</div>
                         <div class="service2-content">
