--- a/contact.html
+++ b/contact.html
@@ -125,11 +125,11 @@
     <div class="contact-hero">
         <div class="hero-content">
             <h1>Contact</h1>
-            <div class="breadcrumb">
+            <!-- <div class="breadcrumb">
                 <a href="/index.html">Home</a>
                 <span class="separator">&rarr;</span>
                 <span>Contact</span>
-            </div>
+            </div> -->
         </div>
     </div>
 
