--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <div class="tt-header-col nav-logo">
                 <!-- Begin logo 
                 ================ -->
-                <img src="/images/Alaknanda Transport logo final.png" alt="">
+                <img src="/images/Alaknanda Transport logo final-removebg-preview.jpg" alt="">
                 <!-- End logo -->
             </div>
             <!-- /.tt-header-col -->
