--- a/index.html
+++ b/index.html
@@ -976,7 +976,7 @@
                     <!-- Service Card 1 -->
                     <div class="service2-card">
                         <div class="service2-image-wrapper">
-                            <img src="/images/Gemini_Generated_Image_t5jwdut5jwdut5jw.png"
+                            <img src="/images/ChatGPT Image Jul 10, 2025, 03_29_00 PM.png"
                                 alt="Workers in industrial setting">
                         </div>
                         <div class="service2-number-circle">01</div>
