--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                             <video id="main-video" autoplay loop muted playsinline webkit-playsinline preload="none"
                                 poster="">
                                 <!-- old loader - https://gozoop.com/uploads/media/source/bxmvgBICdjPB_preloader.gif -->
-                                <source src="/video/herovideo.mp4" type="video/mp4">
+                                <source src="/video/herovid.mp4" type="video/mp4">
                             </video>
 
                         </div>
