--- a/index.html
+++ b/index.html
@@ -349,11 +349,9 @@ body.fonts-loaded .hero-text {
                     </div>
                     <p class="subtitle-text">ABOUT OUR COMPANY</p>
                 </div>
-                <h2 class="title-main">Services With A Wide Range Of Cars</h2>
+                <h2 class="title-main">From Mills to Destilleries, We Keep India Moving Safely</h2>
                 <p class="description-text">
-                    Whether You're Embarking On A Cross-Country Adventure Or Exploring A New
-                    Destination By Car. Finding The Right Car Rental Vehicle Is Essential For A Stress-Free Journey.
-                    Here Are Some Rental Car Tips To Help You Score.
+                    At Alaknanda Transport, we specialize in reliable molasses and bulk logistics across India, ensuring safe, timely, and efficient deliveries from sugar mills to distilleries. With a modern GPS-enabled fleet, strict safety protocols, and a customer-first approach, we have built a strong reputation as a trusted partner in bulk transportation. Our mission is simple—seamless connectivity, uncompromised safety, and nationwide service that helps industries move forward with confidence.
                 </p>
 
                 <div class="contact-row">
@@ -414,12 +412,12 @@ body.fonts-loaded .hero-text {
         <div class="testimonial-content">
             <div class="testimonial-title">
                 <!-- <h4 class="subtitle">CUSTOMER STORY</h4> -->
-                <h2 class="title">Over 400 Brands Satisfied</h2>
+                <h2 class="title">Customer Experiences That Speak for Themselves</h2>
                 <!-- <p class="desc">Journey to Success: How Konstant Infosolutions Turned Ideas into Digital Triumphs</p> -->
             </div>
             <div class="slider-full-container">
                 <!-- Testimonial Slider -->
-                <div class="slider-container">
+                <div class="slider-container"  style="margin-top: 50px;">
                     <div class="slider-track" id="sliderTrack">
                         <!-- Slide 1 -->
                         <div class="testimonial-card">
@@ -435,16 +433,15 @@ body.fonts-loaded .hero-text {
                             <div class="card-body">
                                 <p class="quote-icon">❝</p>
                                 <p class="testimonial-text">
-                                    Despite the ongoing COVID-19 pandemic, Konstant Infosolutions
-                                    strived to finish the client’s development work. In the end, they
-                                    successfully created the site and app. The team’s accessibility and
-                                    high-caliber work made them a reliable partner.
+                                   Their pan-India operations mean I can rely on them coast to coast. From the sugar factory to the distillery, the service was flawless.
+
                                 </p>
                             </div>
 
                             <div class="card-footer">
                                 <div class="person-info">
-                                    <strong>Nasrullah M.</strong>
+                                    <strong>Ravi
+</strong>
                                     <!-- <div class="position">Founder</div> -->
                                 </div>
                                 <!-- <div class="validated-by">
@@ -468,16 +465,16 @@ body.fonts-loaded .hero-text {
                             <div class="card-body">
                                 <p class="quote-icon">❝</p>
                                 <p class="testimonial-text">
-                                    Despite the ongoing COVID-19 pandemic, Konstant Infosolutions
-                                    strived to finish the client’s development work. In the end, they
-                                    successfully created the site and app. The team’s accessibility and
-                                    high-caliber work made them a reliable partner.
+                                    
+Vehicles are well-maintained and spotlessly clean—unlike other carriers. It shows real care for our cargo
+
                                 </p>
                             </div>
 
                             <div class="card-footer">
                                 <div class="person-info">
-                                    <strong>Nasrullah M.</strong>
+                                    <strong>Suresh
+</strong>
                                     <!-- <div class="position">Founder</div> -->
                                 </div>
                                 <!-- <div class="validated-by">
@@ -501,16 +498,14 @@ body.fonts-loaded .hero-text {
                             <div class="card-body">
                                 <p class="quote-icon">❝</p>
                                 <p class="testimonial-text">
-                                    Despite the ongoing COVID-19 pandemic, Konstant Infosolutions
-                                    strived to finish the client’s development work. In the end, they
-                                    successfully created the site and app. The team’s accessibility and
-                                    high-caliber work made them a reliable partner.
+                                   From booking to final delivery, the process was smooth and stress-free. Their staff is courteous and always ready to help.
                                 </p>
                             </div>
 
                             <div class="card-footer">
                                 <div class="person-info">
-                                    <strong>Nasrullah M.</strong>
+                                    <strong>Arjun
+</strong>
                                     <!-- <div class="position">Founder</div> -->
                                 </div>
                                 <!-- <div class="validated-by">
@@ -534,16 +529,15 @@ body.fonts-loaded .hero-text {
                             <div class="card-body">
                                 <p class="quote-icon">❝</p>
                                 <p class="testimonial-text">
-                                    Despite the ongoing COVID-19 pandemic, Konstant Infosolutions
-                                    strived to finish the client’s development work. In the end, they
-                                    successfully created the site and app. The team’s accessibility and
-                                    high-caliber work made them a reliable partner.
+                                    They understand the sugar and distillery industry better than most. Their expertise ensures our shipments are always handled the right way.
+
                                 </p>
                             </div>
 
                             <div class="card-footer">
                                 <div class="person-info">
-                                    <strong>Nasrullah M.</strong>
+                                    <strong>Vikram
+.</strong>
                                     <!-- <div class="position">Founder</div> -->
                                 </div>
                                 <!-- <div class="validated-by">
@@ -567,16 +561,13 @@ body.fonts-loaded .hero-text {
                             <div class="card-body">
                                 <p class="quote-icon">❝</p>
                                 <p class="testimonial-text">
-                                    Despite the ongoing COVID-19 pandemic, Konstant Infosolutions
-                                    strived to finish the client’s development work. In the end, they
-                                    successfully created the site and app. The team’s accessibility and
-                                    high-caliber work made them a reliable partner.
+                                   No hidden costs, no last-minute surprises. Everything was transparent, which built our confidence in working with them.
                                 </p>
                             </div>
 
                             <div class="card-footer">
                                 <div class="person-info">
-                                    <strong>Nasrullah M.</strong>
+                                    <strong>Deepak</strong>
                                     <!-- <div class="position">Founder</div> -->
                                 </div>
                                 <!-- <div class="validated-by">
@@ -587,37 +578,7 @@ body.fonts-loaded .hero-text {
                         </div>
 
                         <!-- Slide 7 -->
-                        <div class="testimonial-card">
-                            <!-- Your testimonial content here -->
-                            <div class="card-header">
-                                <!-- <img src="logo.png" alt="Company Logo" class="company-logo" /> -->
-                                <div class="company-info">
-                                    <h4>Global<br><span>English Hub</span></h4>
-                                    <div class="stars">★★★★★</div>
-                                </div>
-                            </div>
-
-                            <div class="card-body">
-                                <p class="quote-icon">❝</p>
-                                <p class="testimonial-text">
-                                    Despite the ongoing COVID-19 pandemic, Konstant Infosolutions
-                                    strived to finish the client’s development work. In the end, they
-                                    successfully created the site and app. The team’s accessibility and
-                                    high-caliber work made them a reliable partner.
-                                </p>
-                            </div>
-
-                            <div class="card-footer">
-                                <div class="person-info">
-                                    <strong>Nasrullah M.</strong>
-                                    <!-- <div class="position">Founder</div> -->
-                                </div>
-                                <!-- <div class="validated-by">
-                                    <span>VALIDATED BY</span>
-                                    <img src="clutch-logo.png" alt="Clutch Logo" />
-                                </div> -->
-                            </div>
-                        </div>
+                       
 
                         <!-- Add more as needed -->
                     </div>
